--- a/.build/assets/css/style.css
+++ b/.build/assets/css/style.css
@@ -1,10 +1,11 @@
 .glMain {
-    width: 800px;
+    min-width: 300px;
     max-width: 800px;
 }
 
 .glMidle {
     overflow: hidden;
+    margin: 5px;
 }
 
 .glMidLeft {
@@ -18,7 +19,7 @@
     float: right;
     min-width: 200px;
     
-    background-color: rgb(49, 65, 65);
+    background-color: rgb(115, 207, 207);
 }
 
 .productitem {
