--- a/.build/assets/css/style.css
+++ b/.build/assets/css/style.css
@@ -23,6 +23,10 @@
     background-color: rgb(115, 207, 207);
 }
 
+.productitemcaption {
+    overflow: hidden;
+}
+
 .productitem {
     overflow: hidden;
 }
@@ -30,21 +34,29 @@
 .p_id  {
     float: left;
     width: 40px;
+    text-align: right;    
+    padding: 2px;
 }
 
 .p_name  {
     float: left;
-    width: 100px;
+    min-width: 150px;
+    word-wrap: break-word;
+    padding: 2px;
 }
 
 .p_articul  {
     float: left;
     width: 70px;
+    word-wrap: break-word;
+    padding: 2px;
 }
 
 .p_price {
     float: left;
     width: 70px;
+    text-align: right;    
+    padding: 2px;
 }
 
 
