--- a/pages/product.ejs
+++ b/pages/product.ejs
@@ -11,7 +11,8 @@
 <div class="RoundRectDark">
     <form name="form_product_filtr" id="form_product_filtr" action="/product" method="GET">
         Фильтр:<input type="text" name="name" value="">
-        Цена: <input type="number" name="price" value="">
+        арт <input type="text" name="articul" value="">
+        цена >= <input type="number" name="price" value="">
         <button value=cmd_filtr type="submit" name="btn" formaction="/product">Отфильтровать</button>
     </form>
 </div>
